--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body{
   background-image: url(./assets/back.light.png);
   background-repeat: no-repeat;
@@ -23,8 +28,25 @@ text-align: center;
 
 #profile img {
   width: 112px;
+  margin: 56px auto 0px;
 }
 
-#arroba {
+#write {
   text-align: center;
+  font-weight: 600;
+  line-height: 76px;
+  margin-top: 0px;
+
+}
+
+ul {
+  list-style: none;
+}
+
+ul li {
+  border: 1px solid purple;
+  display: flex;
+  justify-content: center;
+  height: 52px;
+  align-items: center;
 }
