--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ isso é um atalho ou shorthand
 
 #container {
   width: 360px;
-  border: 1px solid rebeccapurple;
   margin: 56px auto 0px;  
 }
 
@@ -33,10 +32,30 @@ text-align: center;
 
 #write {
   text-align: center;
-  font-weight: 600;
-  line-height: 76px;
+  font-weight: 700;
+  line-height: 50px;
   margin-top: 0px;
 
+}
+
+#write1 {
+  text-align: center;
+  font-weight: 400;
+  line-height: 20px;
+  margin-bottom: 20px;
+  font-size: 12px;
+}
+
+#write2 {
+  text-align: center;
+  font-weight: 100px;
+  font-size: 30px;
+  margin-top: 56px;
+}
+
+#link {
+ border: 2px solid gray;
+ color: brown;
 }
 
 ul {
