--- a/style.css
+++ b/style.css
@@ -54,7 +54,15 @@ text-align: center;
 }
 
 #link {
-background: rgba(250, 250, 250, 0.001);
+  background: rgba(250, 250, 250, 0.001);
+  border: 1.5px solid transparent; /* Borda transparente no estado normal */
+  border-radius: 8px;
+  transition: background 0.3s ease, border-color 0.3s ease; /* Adiciona transição */
+}
+
+#link:hover {
+  background: rgba(48, 41, 41, 0.3);
+  border-color: black; /* Muda a cor da borda no estado de hover */
 }
 
 ul {
@@ -71,11 +79,20 @@ ul li a {
   text-align: center;
 
   background: rgba(256, 257, 258, 0.3);
-  border: 1px solid rgba(256, 257, 258, 0.6);
+  border: 1px solid black;
 
   border-radius: 8px;
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
 
   text-decoration: none;
+
+  transition: all 0.5s;
+}
+
+/*mouse*/
+
+ul li a:hover {
+background: rgba(255, 255, 255, 0.6);
+  border: 1.5px solid white;
 }
