--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body{
-  background-image: url(./assets/back.light.png);
+  background-image: url(./assets/back.pc.jpg);
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
@@ -46,11 +46,13 @@ text-align: center;
   font-size: 12px;
 }
 
-#write2 {
+#frase {
   text-align: center;
+  align-items: baseline;
   font-weight: 100px;
   font-size: 30px;
-  margin-top: 56px;
+  margin: 50px 0 25px;
+
 }
 
 #link {
@@ -70,6 +72,8 @@ ul {
   display: flex;
   flex-direction: column;
   gap: 16px;
+
+  padding: 24px;
 }
 
 ul li a {
@@ -95,4 +99,36 @@ ul li a {
 ul li a:hover {
 background: rgba(255, 255, 255, 0.6);
   border: 1.5px solid white;
+}
+
+/*social links*/
+
+#social-links {
+  display: flex;
+  gap: 32px;
+  padding: 24px 0;
+  font-size: 24px;
+  justify-content: center;
+}
+
+#social-links a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 16px;
+  border-radius: 50%;
+
+  transition: background 0.3s;
+}
+
+#social-links a:hover{
+  background: rgba(255, 255, 255, 0.6);
+
+}
+
+footer {
+  padding: 24px 0;
+  text-align: center;
+  justify-content: center;
+  font-size: 14px;
 }
